# dbml-language-server

./: .gitmodules  Cargo.toml  README.md  build.rs  rustfmt.toml
src/: file.rs  lib.rs  main.rs  navigation.rs  wrappers.rs
src/providers/: completion.rs  mod.rs  rename.rs
