[package]
name = "dbml-language-server"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.7.1"
log = "0.4"
lsp-server = "0.3.3"
tower-lsp = "0.11.0"
once_cell = "1.4.0"
serde = "1"
serde_json = "1"
tree-sitter = "0.16.1"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"

[build-dependencies]
cc = "*"
